--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -59,7 +59,7 @@
     <p>&copy Udacity</p>
     <div id="fetures">
       <button id="btn">Add sections</button>
-      <button id="top" >TOP</button>
+      <button id="top" data-nav = "top">TOP</button>
     </div>
   </footer>
   <script src="js/app.js" ></script>
